--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ avatar: https://avatars.githubusercontent.com/u/107545098?v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: https://taedonn.com/assets/img/social_preview_img.png # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
